Finished putting in modules

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,9 @@ subprojects {
     }
 
     dependencies {
-
+        compile libs.rxjava
+        compile libs.dagger
+        annotationProcessor libs.daggerannos
         testCompile libs.junit
     }
 }
