--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -12,7 +12,7 @@ ext {
     libs = [
             junit             : "junit:junit:$libVersions.junit",
             dagger            : "com.google.dagger:dagger:$libVersions.dagger",
-            daggercompiler    : "com.google.dagger:dagger-compiler:$libVersions.dagger",
+            daggerannos       : "com.google.dagger:dagger-compiler:$libVersions.dagger",
             rxjava            : "io.reactivex.rxjava2:rxjava:$libVersions.rxjava"
     ]
 
